--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
-        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/react": "^1.0.0",
+        "formik": "^2.4.9",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.6.0",
+        "yup": "^1.7.1"
     }
 }
